--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,5 +1,64 @@
 .imgContainer {
-  width: 500px;
-  height: 500px;
+  width: 30rem;
+  height: 30rem;
   position: relative;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 50%;
+}
+
+.textContainer h2{
+  color: var(--bgt);
+}
+
+.boxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.box h1 {
+  color: var(--bgt)
+}
+
+
+.bright {
+  text-shadow: 0px 0px 5px var(--text);
+}
+
+@media (max-width: 850px) {
+  .imgContainer{
+    display: none;
+  }
+  .textContainer {
+    width: 100%;
+  }
+}
+
+@media (max-width: 660px) {
+  .boxes{
+    flex-direction: column;
+    align-items: center;
+    height: 300px;
+  }
 }
