--- a/src/components/navbar/links/navlink/navlink.module.css
+++ b/src/components/navbar/links/navlink/navlink.module.css
@@ -1,12 +1,17 @@
 .container {
-    min-width: 100px;
-    padding: 10px;
-    border-radius: 20px;
+    font-size: medium;
+    min-width: 80px;
+    padding: 8px;
+    border-radius: 15px;
     font-weight: 500;
     text-align: center;
+    color: var(--bgs);
 }
 
 .active{
-    background-color: var(--textSoft);
-    color: var(--bg);
+    /* background-color: var(--textSoft); */
+    /* color: var(--bg); */
+    background-color: var(--bg);
+    color: var(--text);
+    text-shadow: 0px 0px 5px var(--text);
 }
