--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
 }
