--- a/src/components/postCard/postcard.module.css
+++ b/src/components/postCard/postcard.module.css
@@ -2,17 +2,17 @@
     display: flex;
     flex-direction: column;    
     padding: 20px;
-    margin: 10px;
+    margin: 50px;
     gap: 10px;
-    width: 30%;
-    box-shadow: 2px 2px 10px black;
+    width: 38%;
+    /* box-shadow: 2px 2px 10px black; */
     background-color: var(--bg);
     border-radius: 5px;
 }
 
 .imgContainer {
     position: relative;
-    width: 400px;
+    width: 100%;
     height: 400px;
 }
 
@@ -37,7 +37,7 @@
 .bottom {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
 }
 
 .bottom h2 {
@@ -57,7 +57,7 @@
 
 @media (max-width: 1200px) {
     .container{
-        width: 45%;
+        width: 70%;
     }
 }
 
@@ -68,6 +68,9 @@
 }
 
 @media (max-width: 500px) {
+    .container {
+        width: 60%;
+    }
     .imgContainer{
         height: 300px;
     }
