:recycle: Updating components

--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -40,5 +40,7 @@
         cursor: pointer;
         font-size: 20px;
         font-weight: bold;
+        background-color: transparent;
+        border: none;
     }
 }
