--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -7,7 +7,16 @@
 .logout {
   padding: 10px;
   cursor: pointer;
-  font-weight: bold;
+  /* font-weight: bold; */
+  background-color: black;
+  color: var(--textSoft);
+  border: none;
+  border-radius: 5px;
+}
+
+.logout:hover {
+  transform: scale(1.07);
+  text-shadow: 0px 0px 5px var(--text);
 }
 
 .mbt,
