--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -4,5 +4,9 @@
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  box-shadow: 0px 0px 8px black;
+  background-color: var(--bgDark);
+}
+
+.container:hover {
+  box-shadow: 0px 0px 8px var(--bgt);
 }
