--- a/src/components/dashboardPostCard/postcard.module.css
+++ b/src/components/dashboardPostCard/postcard.module.css
@@ -1,9 +1,35 @@
 .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   min-height: 100px;
-  border: 1px solid var(--bgs);
   border-radius: 5px;
-  /* background-color: var(--bgs); */
-  padding: 5px;
+  background-color: var(--bgDark);
+  padding: 10px;
 }
 
+.container:hover {
+  box-shadow: 0px 0px 10px var(--bgt);
+}
+
+.imgContainer {
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.image {
+  border-radius: 5px;
+}
+
+.title {
+  font-weight: bold;
+  color: var(--text);
+}
+
+.trash:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
