--- a/src/components/postCard/postcard.module.css
+++ b/src/components/postCard/postcard.module.css
@@ -6,7 +6,7 @@
   gap: 10px;
   width: 38%;
   /* box-shadow: 2px 2px 10px black; */
-  background-color: var(--bg);
+  background-color: var(--bgDark);
   border-radius: 5px;
 }
 
@@ -14,11 +14,20 @@
   position: relative;
   width: 100%;
   height: 400px;
+  overflow: hidden;
+  border-radius: 5px;
 }
 
 .img {
   object-fit: cover;
   box-shadow: 2px 2px 7px black;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.img:hover{
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 
 .top {
